c4prj2_input/grade.txt
Grading at Tue Sep  4 21:50:58 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘remove_newline’:
input.c:11:17: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
   char newstr = strdup(str);
                 ^
input.c:13:16: error: passing argument 1 of ‘strchr’ makes pointer from integer without a cast [-Werror=int-conversion]
   pos = strchr(newstr, '\n');
                ^
In file included from input.c:3:0:
/usr/include/string.h:231:14: note: expected ‘const char *’ but argument is of type ‘char’
 extern char *strchr (const char *__s, int __c)
              ^
input.c:15:10: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   return newstr;
          ^
input.c: In function ‘hand_from_string’:
input.c:23:34: error: passing argument 1 of ‘remove_newline’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   char * newstr = remove_newline(str);
                                  ^
input.c:10:8: note: expected ‘char *’ but argument is of type ‘const char *’
 char * remove_newline(char * str) {
        ^
input.c:25:25: error: passing argument 2 of ‘strsep’ makes pointer from integer without a cast [-Werror=int-conversion]
   while(strsep(&newstr, ' ') != NULL) {
                         ^
In file included from input.c:3:0:
/usr/include/string.h:552:14: note: expected ‘const char * restrict’ but argument is of type ‘int’
 extern char *strsep (char **__restrict __stringp,
              ^
input.c:28:9: error: implicit declaration of function ‘strcomp’ [-Werror=implicit-function-declaration]
     if (strcomp(*newstr, '?') == 0) {
         ^
input.c:30:20: error: passing argument 1 of ‘atoi’ makes pointer from integer without a cast [-Werror=int-conversion]
       int n = atoi(*(newstr+1));
                    ^
In file included from input.c:2:0:
/usr/include/stdlib.h:147:12: note: expected ‘const char *’ but argument is of type ‘char’
 extern int atoi (const char *__nptr)
            ^
input.c:36:20: error: incompatible types when initializing type ‘card_t * {aka struct card_tag *}’ using type ‘card_t {aka struct card_tag}’
       card_t * c = card_from_letters(*newstr, *(newstr+1));
                    ^
input.c: In function ‘read_input’:
input.c:57:5: error: value computed is not used [-Werror=unused-value]
     *n_hands++;
     ^
input.c:67:10: error: ‘deck_p’ undeclared (first use in this function)
   return deck_p;
          ^
input.c:67:10: note: each undeclared identifier is reported only once for each function it appears in
input.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
